Closed Bug 1173787 Opened 9 years ago Closed 9 years ago

Exception column number does not match the column number in the stack in many cases

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(2 files, 1 obsolete file)

e.g. anything going through JS_ReportError stuff: they're off by 1.
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Comment on attachment 8621036 [details] [diff] [review]
The column number of an exception populated via PopulateReportBlame should be 1-based

Review of attachment 8621036 [details] [diff] [review]:
-----------------------------------------------------------------

LGTM!
Attachment #8621036 - Flags: review?(nfitzgerald) → review+
Attached patch roll-up patchSplinter Review
Attachment #8621036 - Attachment is obsolete: true
Attachment #8621291 - Flags: review?(nfitzgerald) → review+
https://hg.mozilla.org/mozilla-central/rev/a8219b0154dd
https://hg.mozilla.org/mozilla-central/rev/f1e8e805a170
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: