Bug 1173787.  The column number of an exception populated via PopulateReportBlame should be 1-based.  r=fitzgen